---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Seperated into its own mod.
    - Added GUI for disabled equipment.